--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/glob": "^8.0.0",
     "@types/needle": "^2.5.3",
     "@types/object-hash": "^2.2.1",
+    "color-namer": "^1.4.0",
     "discord.js": "^14.3.0",
     "fast-deep-equal": "^3.1.3",
     "glob": "^8.0.3",
@@ -31,6 +32,7 @@
     "needle": "^3.1.0",
     "object-hash": "^3.0.0",
     "reflect-metadata": "^0.1.13",
+    "sharp": "^0.31.1",
     "unidecode": "^0.1.8"
   },
   "devDependencies": {
