--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -55,5 +55,5 @@ rules:
 
   '@typescript-eslint/no-unused-vars': error
 
-  '@typescript-eslint/explicit-function-return-type': warn
+  '@typescript-eslint/explicit-function-return-type': off
   '@typescript-eslint/no-non-null-assertion': off
