--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -57,3 +57,4 @@ rules:
 
   '@typescript-eslint/explicit-function-return-type': off
   '@typescript-eslint/no-non-null-assertion': off
+  '@typescript-eslint/no-explicit-any': off
