--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node index",
-    "lint": "eslint framework commands --fix"
+    "lint": "lerna run --parallel lint"
   },
   "author": "instance004",
   "license": "MIT",
@@ -22,23 +22,13 @@
   },
   "homepage": "https://github.com/instance004/Essentials#readme",
   "dependencies": {
-    "@types/glob": "^8.0.0",
-    "@types/needle": "^2.5.3",
-    "@types/object-hash": "^2.2.1",
-    "discord.js": "^14.3.0",
-    "fast-deep-equal": "^3.1.3",
-    "glob": "^8.0.3",
-    "lorem-ipsum": "^2.0.8",
-    "needle": "^3.1.0",
-    "object-hash": "^3.0.0",
-    "reflect-metadata": "^0.1.13",
-    "unidecode": "^0.1.8"
+    "discord.js": "^14.3.0"
   },
   "devDependencies": {
-    "@types/unidecode": "^0.1.1",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-unused-imports": "^2.0.0"
+    "eslint-plugin-unused-imports": "^2.0.0",
+    "lerna": "^5.1.4"
   }
 }
