--- a/packages/tsconfig.base.json
+++ b/packages/tsconfig.base.json
@@ -12,6 +12,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "useUnknownInCatchVariables": false,
+    "esModuleInterop": true,
     "target": "es2017",
     "sourceMap": false,
     "allowJs": false,
