feat: add the utils namespace

--- a/units/app/package.json
+++ b/units/app/package.json
@@ -4,7 +4,9 @@
   "description": "Powerfull discord bot",
   "main": "src/main",
   "scripts": {
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "start": "ts-node ."
   },
   "repository": {
     "type": "git",
@@ -16,6 +18,7 @@
   },
   "homepage": "https://github.com/instance004/Essentials#readme",
   "dependencies": {
-    "@essentials/core": "0.0.1"
+    "@essentials/core": "0.0.1",
+    "pretty-bytes": "^5.6.0"
   }
 }
