--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint": "^8.24.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
-    "lerna": "^5.1.4"
+    "lerna": "^5.1.4",
+    "ts-node": "^10.9.1"
   }
 }
