--- a/libs/mathjs/package.json
+++ b/libs/mathjs/package.json
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/instance004/Essentials/issues"
   },
-  "homepage": "https://github.com/instance004/Essentials#readme"
+  "homepage": "https://github.com/instance004/Essentials#readme",
+  "dependencies": {
+    "@essentials/common": "0.0.1"
+  }
 }
