--- a/libs/urban-dictionary/package.json
+++ b/libs/urban-dictionary/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@utils/wolfram-alpha",
+  "name": "@utils/urban-dictionary",
   "version": "0.0.1",
   "description": "",
   "scripts": {
@@ -14,5 +14,8 @@
   "bugs": {
     "url": "https://github.com/instance004/Essentials/issues"
   },
-  "homepage": "https://github.com/instance004/Essentials#readme"
+  "homepage": "https://github.com/instance004/Essentials#readme",
+  "dependencies": {
+    "@essentials/common": "0.0.1"
+  }
 }
