--- a/units/app/package.json
+++ b/units/app/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/instance004/Essentials#readme",
   "dependencies": {
+    "@essentials/common": "0.0.1",
     "@essentials/core": "0.0.1",
     "pretty-bytes": "^5.6.0"
   }
